--- a/browse.html
+++ b/browse.html
@@ -98,9 +98,16 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <div class="navbar">
         <h1>Voyage</h1>
+        <ul class="navbar-links">
+            <li class="nav-item"><a class="nav-link" href=#>Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.enterprise.com">Enterprise</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.thrifty.com">Thrifty</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.hertz.com">Hertz</a></li>
+            <li class="nav-item"><a class="nav-link" href="bargraph2.html">Compare Rates</a></li>
+            <li class="nav-item"><a class="nav-link" href="findcar.html">Help</a></li>
+        </ul>
     </div>
 
     <!-- button to view cars -->
