--- a/browse.html
+++ b/browse.html
@@ -39,6 +39,35 @@
             font-size: 24px;
             font-weight: bold;
         }
+        .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 20px;
+        background-color: #333;
+        color: white;
+    }
+
+    .navbar-links {
+        list-style: none;
+        display: flex;
+        gap: 30px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .navbar-links .nav-item {
+        display: inline;
+    }
+
+    .nav-link {
+        color: white;
+        font-size: 18px;
+    }
+
+    .nav-link:hover {
+        text-decoration: underline;
+    }
         
         .button-box {
             position: absolute;
